--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('desktop.webp');
+    background-image: url('desktop2.webp');
     background-size: cover;
     background-position: top;
     z-index: 1;
@@ -15,7 +15,7 @@
 
 @media only screen and (max-width: 768px) {
     #background {
-        background-image: url('mobile.webp');
+        background-image: url('mobile2.webp');
         background-color: rgba(0, 0, 0, 1); /* Mesma cor e opacidade para o mobile */
     }
 }
